--- a/configs/scannet/scannet_cropformer_ovseg_clip_tap.yaml
+++ b/configs/scannet/scannet_cropformer_ovseg_clip_tap.yaml
@@ -2,7 +2,7 @@ data:
   type: scannet
   data_root: ./data/scannet
   config_root: ./datasets/configs/scannet
-  output_folder: tiger_output
+  output_folder: ovgraph_output
   # rgbd dataset related
   start: 0
   end: -1
@@ -21,7 +21,7 @@ extractor:
   type: ovseg_tap
   config_file: ./3rdparty/ovseg/configs/ovseg_swinB_vitL_demo.yaml
   feat_dim: 1024
-  voc_feature: ./tiger/evaluation/voc_features/scannet20_clip_l_14_vild.npy
+  voc_feature: ./ovgrpah/evaluation/voc_features/scannet20_clip_l_14_vild.npy
   back_feat: clip
 
 merge:
